--- a/templates/_base.html
+++ b/templates/_base.html
@@ -10,8 +10,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.1/animate.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="static/css/base-styles.css" />
     <link rel="stylesheet" href="static/css/template-styles.css" />
+    <link rel="stylesheet" href="static/css/base-styles.css" />
   </head>
 <body>
     <!-- navigation bar -->
@@ -67,8 +67,8 @@
 	<header id="first">
         <div class="header-content">
             <div class="inner">
-                <h1 class="cursive">Simple, One Page Design</h1>
-                <h4>A free landing page theme with video background</h4>
+                <h1 class="cursive">DEAN WANG</h1>
+                <h4>Designer | Developer</h4>
                 <a href="#video-background" id="toggle-video" data-toggle="collapse" class="btn btn-primary btn-xl ">Toggle Video</a>&nbsp;<a href="#one" class="btn btn-primary btn-xl page-scroll">&nbsp;&nbsp;Get Started&nbsp;</a>
             </div>
         </div>
@@ -131,7 +131,7 @@
             <div class="row">
                 <div class="col-xs-12 text-center">
                     <ul class="list-inline">
-                      <li><a rel="nofollow" href="https://www.linkedin.com/in/deanwong0805" title="LinkedIn"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+                      <li><a class="linkedin-color" rel="nofollow" href="https://www.linkedin.com/in/deanwong0805" title="LinkedIn"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
                     </ul>
                 </div>
             </div>  
