--- a/templates/aaacf.html
+++ b/templates/aaacf.html
@@ -5,7 +5,7 @@
         <div class="header-content">
             <div class="inner project-title">
                 <h1>Ann Arbor Area Community Foundation</h1>
-                <h2>Office Communication System Design</h2>
+                <h2>Communication System Design</h2>
             </div>
         </div>
     </header>
@@ -44,43 +44,38 @@
     <div class="bg-primary project-content">
         <div class="container">
             <div class="row">
-                 <div class="col-xs-12">
+                 <div class="col-xs-12 work-flow">
                     <h2>Work Flow</h2>
-                    <h4>?->?</h4>
+                    <h4>Background Research->Interview Protocol->Affinity Diagram</h4>
+                    <hr>         
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 col-sm-5">
                     <h3>Background Research</h3>
+                    <hr>
+                    <h4>To use industry-quality resources to research organization to gain additional information about the context of project: e.g., organizational structure, role in the community, values, etc.</h4>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-6">
-                    <img src="http://placehold.it/700x400" alt="bgResearch">
-                </div>
-                <div class="col-xs-6">
-                    <h4>AAAAAAAAA</h4>
-                </div>
-            </div>
-            <br>
-            <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 col-sm-5 col-sm-offset-2">
                     <h3>Interview Protocol</h3>
-                    <h4>AAAAAAAAAAAA</h4>
+                    <hr>
+                    <h4>For client-based projects: A client’s existing information workflow; what the workflow is supposed to be, what is or isn’t working, where there are workflow breakdowns, and how people work around them.</h4>
                 </div>
             </div>
             <br>
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 work-flow">
                     <h3>Affinity Diagram</h3>
+                    <h4>Organize a large number of ideas into their natural relationships.</h4>
+                    <hr>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-6">
-                    <img src="http://placehold.it/700x400" alt="bgResearch">
+                <div class="col-xs-12 col-sm-6">
+                    <img class="img-responsive" src="static/pictures/affinity1.jpg" alt="affinity1">
                 </div>
-                <div class="col-xs-6">
-                    <h4>AAAAAAAAA</h4>
+                <div class="col-xs-12 col-sm-6">
+                    <img class="img-responsive" src="static/pictures/affinity2.jpg" alt="affinity2">
                 </div>
             </div>
         </div>
