--- a/templates/aore.html
+++ b/templates/aore.html
@@ -3,40 +3,43 @@
 <!-- header -->
     <header id="first" style="background-image: url('static/pictures/outdoor.jpg')">
         <div class="header-content">
-            <div class="inner">
+            <div class="inner project-title">
                 <h1>Association of Outdoor Recreation Education</h1>
-                <h3>Website Usability Evaluation</h3>
+                <h3>Web Usability Evaluation</h3>
             </div>
         </div>
     </header>
     <div class="bg-primary project-info">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-sm-4">
+                <div class="col-xs-12 col-sm-5">
                     <h2>Project Overview</h2>
                     <hr>
                     <h4>The Association of Outdoor Recreation and Education (AORE) is an non-profit organization that provides services to professionals and students in the field of outdoor recreation and education. AORE wants to know members thoughts and needs of current membership system in order to improve services.</h4>
                 </div>
-                <div class="col-xs-12 col-sm-3">
+                <div class="col-xs-12 col-sm-2">
                     <h2>Duration</h2>
                     <hr>
-                    <h4>December, 2015 - April, 2016</h4>
+                    <h4>Dec,2015-Apr,2016</h4>
                 </div>
                 <div class="col-xs-12 col-sm-2">
                     <h2>Role</h2>
                     <hr>
-                    <ul>
-                        <li>UX Researcher</li>
+                    <ul class="my-role">
+                        <li><h4>UX Researcher</h4></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-3">
                     <h2>Methods</h2>
                     <hr>
-                    <ul>
-                        <li>Interaction Map</li>
-                        <li>Personas</li>
-                        <li>Interview</li>
-                        <li>Survey</li>
+                    <ul class="my-role">
+                        <li><h4>Interaction Map</h4></li>
+                        <li><h4>Interview</h4></li>
+                        <li><h4>Personas</h4></li>
+                        <li><h4>Scenarios</h4></li>
+                        <li><h4>Survey</h4></li>
+                        <li><h4>Comparative Analysis</h4></li>
+                        <li><h4>Heuristic Evaluation</h4></li>
                     </ul>
                 </div>
             </div>
@@ -45,57 +48,51 @@
     <div class="bg-primary project-content">
         <div class="container">
             <div class="row">
-                 <div class="col-xs-12">
+                 <div class="col-xs-12 work-flow">
                     <h2>Work Flow</h2>
-                    <h4>?->?</h4>
+                    <h4>Interaction Map->Interview->Personas/Scenarios->Comparative Analysis->Survey->Heuristic Evaluation</h4>
+                    <hr>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 sub-section">
                     <h3>Interaction Map</h3>
+                    <h4>Gather screen shots for every action one can take on the websitr, and make a layout that indicates “where you go” when you take each action— what the screen looks like or what happens. Visually indicate subsets of activities in the product, and “jumping points” where a number of actions go to the same place. In this case, we focused on three main features- Membership, News and Give.</h4>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-6">
-                    <img src="http://placehold.it/700x400" alt="bgResearch">
-                </div>
-                <div class="col-xs-6">
-                    <h4>AAAAAAAAA</h4>
+                <div class="col-xs-12">
+                    <img class="img-responsive" src="static/pictures/interaction_map.jpg" alt="interaction_map">
                 </div>
             </div>
             <br>
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 sub-section">
                     <h3>Personas</h3>
+                    <h4>Based on interviews with targer auidence, we constructed different fictitious characters (personas) that represent some of the dimensions of the target population.</h4>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-6">
-                    <img src="http://placehold.it/700x400" alt="bgResearch">
+                <div class="col-xs-12 col-sm-6">
+                    <img class="img-responsive" src="static/pictures/persona1.jpg" alt="persona1">
                 </div>
-                <div class="col-xs-6">
-                    <h4>AAAAAAAAA</h4>
-                </div>
-            </div>
-            <br>
-            <div class="row">
-                <div class="col-xs-12">
-                    <h3>Interview</h3>
-                    <h4>AAAAAAAAAAAA</h4>
+                 <div class="col-xs-12 col-sm-6">
+                    <img class="img-responsive" src="static/pictures/persona2.jpg" alt="persona2">
                 </div>
             </div>
             <br>
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 sub-section">
                     <h3>Survey</h3>
+                    <h4>The key purpose of the survey is to better understand the attitudes, behaviors, and characteristics of our target audience, as well as the interactions among different combinations of these.</h4>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-6">
-                    <img src="http://placehold.it/700x400" alt="bgResearch">
+                <div class="col-xs-12 col-sm-6">
+                    <img class="img-responsive" src="static/pictures/survey1.jpg" alt="survey1">
                 </div>
-                <div class="col-xs-6">
-                    <h4>AAAAAAAAA</h4>
+                <div class="col-xs-12 col-sm-6">
+                    <img class="img-responsive" src="static/pictures/survey2.jpg" alt="survey2">
                 </div>
             </div>
         </div>
