--- a/templates/candc.html
+++ b/templates/candc.html
@@ -3,7 +3,7 @@
 <!-- header -->
     <header id="first" style="background-image: url('static/pictures/candc.jpg')">
         <div class="header-content">
-            <div class="inner">
+            <div class="inner project-title">
                 <h1>Comfort and Climate</h1>
                 <h3>Website Application Development</h3>
             </div>
@@ -12,34 +12,34 @@
     <div class="bg-primary project-info">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-sm-4">
+                <div class="col-xs-12 col-sm-5">
                     <h2>Project Overview</h2>
                     <hr>
                     <h4>Dr.Lars Junghans from Taubman College of Architecture and Urban Planning in University of Michigan received client request to develope a web application which can calculate and evaluate building construction in professional perspectives (sensitivity study, Meteo ratios and etc.). As a lead developer in the team, it is my duty to help achieve the goal.</h4>
                 </div>
-                <div class="col-xs-12 col-sm-3">
+                <div class="col-xs-12 col-sm-2">
                     <h2>Duration</h2>
                     <hr>
-                    <h4>August, 2015 - Present</h4>
+                    <h4>Aug,2015-Present</h4>
                 </div>
                 <div class="col-xs-12 col-sm-2">
                     <h2>Role</h2>
                     <hr>
-                    <ul>
-                        <li>Project Manager</li>
-                        <li>Web Developer</li>
-                        <li>Backend</li>
+                    <ul class="my-role">
+                        <li><h4>Project Manager</h4></li>
+                        <li><h4>Web Developer</h4></li>
+                        <li><h4>Backend</h4></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-3">
                     <h2>Skills</h2>
                     <hr>
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Javascript</li>
-                        <li>Java Servlet</li>
-                        <li>HyperSQL database</li>              
+                    <ul class="my-role">
+                        <li><h4>HTML</h4></li>
+                        <li><h4>CSS</h4></li>
+                        <li><h4>Javascript</h4></li>
+                        <li><h4>Java Servlet</h4></li>
+                        <li><h4>HyperSQL Database</h4></li>              
                     </ul>
                 </div>
             </div>
@@ -48,54 +48,58 @@
     <div class="bg-primary project-content">
         <div class="container">
             <div class="row">
-                 <div class="col-xs-12">
+                 <div class="col-xs-12 work-flow">
                     <h2>Work Flow</h2>
-                    <h4>?->?</h4>
+                    <h4>Interface Prototype->Code Translation->Algorithm Integration->Backend Coding</h4>
+                    <hr>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12">
-                    <h3>C++ Code Translation</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-6">
-                    <img src="http://placehold.it/700x400" alt="bgResearch">
-                </div>
-                <div class="col-xs-6">
-                    <h4>AAAAAAAAA</h4>
-                </div>
-            </div>
-            <br>
-            <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 sub-section">
                     <h3>Interface Prototype</h3>
+                    <h4>To start with, I talked to Dr.Junghans about his idea of the web applications and expected features. Later I came up with the interface prototype and integrated it with HTML/CSS/Javascript.</h4>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-6">
-                    <img src="http://placehold.it/700x400" alt="bgResearch">
+                <div class="col-xs-12 col-sm-6">
+                    <img class="img-responsive" src="static/pictures/candc-interface1.jpg" alt="candc-interface1">
+                </div>
+                <div class="col-xs-12 col-sm-6">
+                    <img class="img-responsive" src="static/pictures/candc-interface2.jpg" alt="candc-interface2">
                 </div>
             </div>
             <br>
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 sub-section">
+                    <h3>C++ Code Translation</h3>
+                    <h4>Dr.Junghans had many unique algorithms in C++ to help calculate building parameters such as internal and external temperature. Before integrating them to our web applications, my team and I have to translate them into Java.</h4>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-xs-12 sub-section">
                     <h3>Backend Coding</h3>
+                    <h4>I chose to use MyEclipse for better support of Web Service Project. Except for algorithm integrations, I am also in charge of Jave Servlet coding to ensure correct request/response contents displaying on the Web Application. In addition, I am responsible for coding database connections and inqueries in Java as well.</h4>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-6">
-                    <img src="http://placehold.it/700x400" alt="bgResearch">
+                <div class="col-xs-12">
+                    <img class="img-responsive" src="static/pictures/candc-backend.jpg" alt="candc-backend">
                 </div>
-                <div class="col-xs-6">
-                    <h4>AAAAAAAAA</h4>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-xs-12 sub-section">
+                    <h3>Beta Version</h3>
+                    <a href="http://comfortandclimate.com/candc/">
+                        <h4 style="text-align:center; margin:0">(View Beta)</h4>
+                    </a>
                 </div>
             </div>
             <br>
             <div class="row">
                 <div class="col-xs-12">
-                    <h3>Beta Version</h3>
-                    <h4>URL</h4>
+                    <img class="img-responsive" src="static/pictures/candc-beta.jpg" alt="candc-beta">
                 </div>
             </div>
         </div>
