--- a/templates/ecommunity.html
+++ b/templates/ecommunity.html
@@ -3,7 +3,7 @@
 <!-- header -->
     <header id="first" style="background-image: url('static/pictures/ecommunity.jpg')">
         <div class="header-content">
-            <div class="inner">
+            <div class="inner project-title">
                 <h1>E-Community</h1>
                 <h3>Website Design and Prototype</h3>
             </div>
@@ -12,68 +12,76 @@
     <div class="bg-primary project-info">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-sm-4">
+                <div class="col-xs-12 col-sm-5">
                     <h2>Project Overview</h2>
                     <hr>
                     <h4>The Asian ratios in Ann Arbor as well as Ypsilanti is pretty high due to the international students and immigrants. However, Asians tend to group up and live in their unique circles due to the cultural differences in U.S, which caused information sharing problem such as selling used items and school course recommendations.</h4>
                 </div>
-                <div class="col-xs-12 col-sm-3">
+                <div class="col-xs-12 col-sm-2">
                     <h2>Duration</h2>
                     <hr>
-                    <h4>September, 2015 - December, 2015</h4>
+                    <h4>Sep,2015-Dec,2015</h4>
                 </div>
                 <div class="col-xs-12 col-sm-2">
                     <h2>Role</h2>
                     <hr>
-                    <ul>
-                        <li>UX/UI Designer</li>
+                    <ul class="my-role">
+                        <li><h4>UX/UI Designer</h4></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-3">
                     <h2>Methods</h2>
                     <hr>
-                    <ul>
-                        <li>Personas</li>
-                        <li>Scenario</li>
-                        <li>QOC Analysis</li>
-                        <li>Sketch</li>
-                        <li>Prototype</li>                 
+                    <ul class="my-role">
+                        <li><h4>Interview</h4></li>
+                        <li><h4>Personas</h4></li>
+                        <li><h4>Scenarios</h4></li>
+                        <li><h4>QOC Analysis</h4></li>
+                        <li><h4>Sketch</h4></li>
+                        <li><h4>Prototype</h4></li>                 
                     </ul>
                 </div>
             </div>
         </div>
     </div>
     <div class="bg-primary project-content">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                 <div class="col-xs-12">
+                 <div class="col-xs-12 work-flow">
                     <h2>Work Flow</h2>
-                    <h4>?->?</h4>
+                    <h4>Interview->Personas/Scenarios->QOC Analysis->Sketches->Prototype</h4>
+                    <hr>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12">
-                    <h3>Paper Prototype</h3>
+                <div class="col-xs-12 sub-section">
+                    <h3>Paper Prototype (Sample login)</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-6">
-                    <img src="http://placehold.it/700x400" alt="bgResearch">
+                <div class="col-xs-12 col-sm-4">
+                    <img class="img-responsive" src="static/pictures/paper1.jpg" alt="paper1">
                 </div>
-                <div class="col-xs-6">
-                    <h4>AAAAAAAAA</h4>
+                <div class="col-xs-12 col-sm-4">
+                    <img class="img-responsive" src="static/pictures/paper2.jpg" alt="paper2">
+                </div>
+                <div class="col-xs-12 col-sm-4">
+                    <img class="img-responsive" src="static/pictures/paper3.jpg" alt="paper3">
                 </div>
             </div>
             <br>
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 sub-section">
                     <h3>Digital Prototype</h3>
-                    <h4>URL</h4>
+                    <a href="http://people.emich.edu/xwang16/SI582/draft/Community/public_html/">
+                        <h4 style="text-align:center">(View Prototype)</h4>
+                    </a>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-6">
-                    <img src="http://placehold.it/700x400" alt="bgResearch">
+                <div class="col-xs-12 col-sm-6">
+                    <img class="img-responsive" src="static/pictures/digital1.jpg" alt="digital1">
+                </div>
+                <div class="col-xs-12 col-sm-6">
+                    <img class="img-responsive" src="static/pictures/digital2.jpg" alt="digital2">
                 </div>
             </div>
         </div>
