--- a/templates/umclinical.html
+++ b/templates/umclinical.html
@@ -3,7 +3,7 @@
 <!-- header -->
     <header id="first" style="background-image: url('static/pictures/umclinical.jpg')">
         <div class="header-content">
-            <div class="inner">
+            <div class="inner project-title">
                 <h1>UM Clinical Studies</h1>
                 <h3>Website Design</h3>
             </div>
@@ -12,31 +12,31 @@
     <div class="bg-primary project-info">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-sm-4">
+                <div class="col-xs-12 col-sm-5">
                     <h2>Project Overview</h2>
                     <hr>
                     <h4>Michigan Institute for Clinical and Health Research has developed a web protol for users to start or participate medical research. However, the previous website is not responsive nor user friendly for people with disability and thus could not provide good user experience. My team and I are to redesign and improve the website.</h4>
                 </div>
-                <div class="col-xs-12 col-sm-3">
+                <div class="col-xs-12 col-sm-2">
                     <h2>Duration</h2>
                     <hr>
-                    <h4>January, 2016 - Present</h4>
+                    <h4>Jan,2016-Present</h4>
                 </div>
                 <div class="col-xs-12 col-sm-2">
                     <h2>Role</h2>
                     <hr>
-                    <ul>
-                        <li>UI Designer</li>
+                    <ul class="my-role">
+                        <li><h4>UI Designer</h4></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-3">
                     <h2>Skills</h2>
                     <hr>
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Javascript</li>
-                        <li>SASS</li>              
+                    <ul class="my-role">
+                        <li><h4>HTML</h4></li>
+                        <li><h4>CSS</h4></li>
+                        <li><h4>Javascript</h4></li>
+                        <li><h4>SASS</h4></li>              
                     </ul>
                 </div>
             </div>
@@ -45,47 +45,36 @@
     <div class="bg-primary project-content">
         <div class="container">
             <div class="row">
-                 <div class="col-xs-12">
+                 <div class="col-xs-12 work-flow">
                     <h2>Work Flow</h2>
-                    <h4>?->?</h4>
+                    <h4>Sketch->Interface</h4>
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 sub-section">
+                    <h3>Sketch</h3>
+                    <h4>To start with, my team and I had to do sketches to decide what the page looked like. We decided to use board since it's easy to draw our ideas and convinient to discuess with others and made changes if necessary.</h4>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <h3>UX Design</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-6">
-                    <img src="http://placehold.it/700x400" alt="bgResearch">
-                </div>
-                <div class="col-xs-6">
-                    <h4>AAAAAAAAA</h4>
+                    <img class="img-responsive" src="static/pictures/ncrc-prototype.jpg" alt="ncrc-prototype">
                 </div>
             </div>
             <br>
             <div class="row">
-                <div class="col-xs-12">
-                    <h3>Prototype</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-6">
-                    <img src="http://placehold.it/700x400" alt="bgResearch">
-                </div>
-            </div>
-            <br>
-            <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 sub-section">
                     <h3>Interface</h3>
+                    <h4>After sketching, we started to code in html to create basic template that looked like what was on the white board. Then we began adding style sheets and plugins to build basic interactions.<a href="https://umclinicalstudies.org/">(View Beta)</a></h4>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-6">
-                    <img src="http://placehold.it/700x400" alt="bgResearch">
+                <div class="col-xs-12 col-sm-6">
+                    <img class="img-responsive" src="static/pictures/ncrc-interface1.jpg" alt="ncrc-interface1">
                 </div>
-                <div class="col-xs-6">
-                    <h4>AAAAAAAAA</h4>
+                 <div class="col-xs-12 col-sm-6">
+                    <img class="img-responsive" src="static/pictures/ncrc-interface2.jpg" alt="ncrc-interface2">
                 </div>
             </div>
         </div>
