--- a/static/css/project-styles.css
+++ b/static/css/project-styles.css
@@ -16,9 +16,18 @@ header{
 	padding: 2em;
 }
 
+.project-content>h3{
+	text-align: center;
+}
+
 img{
 	width:100%; 
 	height:100%
+}
+
+h2{
+	font-family: Georgia, serif !important;
+	color: #B3E5FC;
 }
 
 .project-title>h1{
@@ -26,8 +35,9 @@ img{
 	font-style: italic !important;
 }
 
-.project-title>h3, h2{
+.project-title>h3, .project-title>h2{
 	font-family: Georgia, serif !important;
+	color: white;
 }
 
 hr{
@@ -42,4 +52,12 @@ hr{
 	list-style: none;
 	padding: 0;
 	margin: 0;
+}
+
+.work-flow{
+	text-align: center;
+}
+
+.sub-section>h3{
+	text-align: center;
 }
