--- a/templates/dobbinIII.html
+++ b/templates/dobbinIII.html
@@ -3,7 +3,7 @@
 <!-- header -->
     <header id="first" style="background-image: url('static/pictures/sales.jpg')">
         <div class="header-content">
-            <div class="inner">
+            <div class="inner project-title">
                 <h1>Dobbin III</h1>
                 <h3>Website Application Development</h3>
             </div>
@@ -12,32 +12,32 @@
     <div class="bg-primary project-info">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-sm-4">
+                <div class="col-xs-12 col-sm-5">
                     <h2>Project Overview</h2>
                     <hr>
-                    <h4>Dr.Lars Junghans from Taubman College of Architecture and Urban Planning in University of Michigan received client request to develope a web application which can calculate and evaluate building construction in professional perspectives (sensitivity study, Meteo ratios and etc.). As a lead developer in the team, it is my duty to help achieve the goal.</h4>
+                    <h4>Gordon Food Service (GFS) needed to transfer one of the Java application (DobbinII) into a web based application (DobbinIII) which was designed exclusively for Sales Representatives. As an intern in Mobile team, my team and I decided to use AngularJS as the frontend framework and created prototype.</h4>
                 </div>
-                <div class="col-xs-12 col-sm-3">
+                <div class="col-xs-12 col-sm-2">
                     <h2>Duration</h2>
                     <hr>
-                    <h4>May, 2014 - August, 2014</h4>
+                    <h4>May,2014-Aug,2014</h4>
                 </div>
                 <div class="col-xs-12 col-sm-2">
                     <h2>Role</h2>
                     <hr>
-                    <ul>
-                        <li>UI Designer</li>
-                        <li>Web Developer</li>
+                    <ul class="my-role">
+                        <li><h4>UI Designer</h4></li>
+                        <li><h4>Web Developer</h4></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-3">
                     <h2>Skills</h2>
                     <hr>
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Javascript</li>
-                        <li>AngularJS</li>             
+                    <ul class="my-role">
+                        <li><h4>HTML</h4></li>
+                        <li><h4>CSS</h4></li>
+                        <li><h4>Javascript</h4></li>
+                        <li><h4>AngularJS</h4></li>             
                     </ul>
                 </div>
             </div>
@@ -46,54 +46,88 @@
     <div class="bg-primary project-content">
         <div class="container">
             <div class="row">
-                 <div class="col-xs-12">
+                 <div class="col-xs-12 work-flow">
                     <h2>Work Flow</h2>
-                    <h4>?->?</h4>
+                    <h4>Interface Design->AngularJS Coding</h4>
+                    <hr>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12">
-                    <h3>Training</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-6">
-                    <img src="http://placehold.it/700x400" alt="bgResearch">
-                </div>
-                <div class="col-xs-6">
-                    <h4>AAAAAAAAA</h4>
-                </div>
-            </div>
-            <br>
-            <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 sub-section">
                     <h3>Interface Design</h3>
+                    <h4>To start with, my job was to create template in HTML with simple styling, which also required to show basic interactions (button clicks, pop ups)</h4>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-6">
-                    <img src="http://placehold.it/700x400" alt="bgResearch">
+               <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
+                  <!-- Indicators -->
+                  <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                    <li data-target="#myCarousel" data-slide-to="3"></li>
+                    <li data-target="#myCarousel" data-slide-to="4"></li>
+                    <li data-target="#myCarousel" data-slide-to="5"></li>
+                    <li data-target="#myCarousel" data-slide-to="6"></li>
+                  </ol>
+
+                  <!-- Wrapper for slides -->
+                  <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                      <img src="static/pictures/dobbin-interface1.png" alt="dobbin-interface1">
+                    </div>
+                    <div class="item">
+                      <img src="static/pictures/dobbin-interface2.png" alt="dobbin-interface2">
+                    </div>
+                    <div class="item">
+                      <img src="static/pictures/dobbin-interface3.png" alt="dobbin-interface3">
+                    </div>
+                    <div class="item">
+                      <img src="static/pictures/dobbin-interface4.png" alt="dobbin-interface4">
+                    </div>
+                     <div class="item">
+                      <img src="static/pictures/dobbin-interface5.png" alt="dobbin-interface5">
+                    </div>
+                     <div class="item">
+                      <img src="static/pictures/dobbin-interface6.png" alt="dobbin-interface6">
+                    </div>
+                     <div class="item">
+                      <img src="static/pictures/dobbin-interface7.png" alt="dobbin-interface7">
+                    </div>
+                  </div>
+
+                  <!-- Left and right controls -->
+                  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
                 </div>
             </div>
             <br>
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 sub-section">
                     <h3>AngularJS Coding</h3>
+                    <h4>During my work, I mainly focused on creating functions as well as adding event listeners for interactions and data manipulations.</h4>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-6">
-                    <img src="http://placehold.it/700x400" alt="bgResearch">
+                <div class="col-xs-12">
+                    <img src="static/pictures/dobbin-backend1.png" alt="dobbin-backend1">
                 </div>
-                <div class="col-xs-6">
-                    <h4>AAAAAAAAA</h4>
+                <br>
+                <div class="col-xs-12">
+                    <img src="static/pictures/dobbin-backend2.png" alt="dobbin-backend2">
                 </div>
             </div>
             <br>
             <div class="row">
-                <div class="col-xs-12">
-                    <h3>Beta Version (Presentation)</h3>
-                    <h4>URL</h4>
+                <div class="col-xs-12 sub-section">
+                    <h3>Beta Version</h3>
+                    <a href="https://drive.google.com/open?id=1nncfxvBpCGZSPH1qe7SEGRpM1tmgFnIT-OdPPIqvswU" style="text-align:center; margin:0"><h4>(View Presentation)</h4></a>
                 </div>
             </div>
         </div>
