--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="margin-top-0 text-primary">Projects</h2>
+                    <h2 class="margin-top-0 text-primary">PROJECTS</h2>
 <!--                     <hr class="primary"> -->
                     <!-- <p class="text-faded">
                         Bootstrap's responsive grid comes in 4 sizes or "breakpoints": tiny (xs), small(sm), medium(md) and large(lg). These 4 grid sizes enable you create responsive layouts that behave accordingly on different devices.
@@ -154,42 +154,42 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="margin-top-0 text-primary">Experience</h2>
+                    <h2 class="margin-top-0 text-primary-dark">EXPERIENCE</h2>
                     <!-- <hr class="primary"> -->
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-md-4 text-center">
+                <div class="col-xs-12 col-md-4 text-center">
                     <div class="feature">
                     <!--<i class="icon-lg ion-android-laptop wow fadeIn" data-wow-delay=".3s"></i>
                         <h3>Responsive</h3> -->
-                        <img class="img-responsive" src="http://placehold.it/700x400" alt="GFS">
-                        <p class="text-muted">Your site looks good everywhere</p>
+                        <img class="img-responsive" src="static/pictures/gfs-logo.jpg" alt="GFS">
+                        <p class="text-muted">Gordon Food Service (May,2015-Aug,2015)</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 text-center">
+                <div class="col-xs-12 col-md-4 text-center">
                     <div class="feature">
                     <!--<i class="icon-lg ion-social-sass wow fadeInUp" data-wow-delay=".2s"></i>
                         <h3>Customizable</h3> -->
-                        <img class="img-responsive" src="http://placehold.it/700x400" alt="Tabuman">
-                        <p class="text-muted">Easy to theme and customize with SASS</p>
+                        <img class="img-responsive" src="static/pictures/tabuman-logo.png" alt="Tabuman">
+                        <p class="text-muted">Tabuman College, UM (Aug,2015-Present)</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 text-center">
+                <div class="col-xs-12 col-md-4 text-center">
                     <div class="feature">
                        <!--  <i class="icon-lg ion-ios-star-outline wow fadeIn" data-wow-delay=".3s"></i>
                         <h3>Consistent</h3> -->
-                        <img class="img-responsive" src="http://placehold.it/700x400" alt="NCRC">
-                        <p class="text-muted">A mature, well-tested, stable codebase</p>
+                        <img class="img-responsive" src="static/pictures/michr-logo.jpg" alt="MICHR">
+                        <p class="text-muted">MICHR, UM (Jan,2016-Present)</p>
                     </div>
                 </div>
             </div>   
             <br><br>
             <div class="text-center">
-                <a href="" class="btn btn-primary btn-xl my-button">My Resume</a>
-            </div>     
+                <a href="https://drive.google.com/file/d/0B1Hdax9YNzAqSHNfU3ZBX09qeG8/view?usp=sharing" class="btn btn-primary btn-xl my-button">My Resume</a>
+            </div>
         </div>
     </section>
 
@@ -197,55 +197,45 @@
     <section class="container-fluid bg-primary" id="three">
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-                <h2 class="text-center text-primary">Extracurricular</h2>
+                <h2 class="text-center text-primary">EXTRACURRICULAR</h2>
                 <!-- <hr> -->
                 <div class="media wow fadeInRight">
-                    <h3>Simple</h3>
+                    <h3>Talent</h3>
                     <div class="media-body media-middle">
-                        <p>What could be easier? Get started fast with this landing page starter theme.</p>
+                        <p>Instead of sitting in front of computer all day, I joined diverse groups and learnt Japanese Modern Dance and Traditional Korean Instrument.</p>
                     </div>
                     <div class="media-right">
-                        <i class="icon-lg ion-ios-bolt-outline"></i>
+                        <i class="icon-lg ion-film-marker"></i>
                     </div>
                 </div>
                 <hr>
                 <div class="media wow fadeIn">
-                    <h3>Free</h3>
+                    <h3>Communication</h3>
                     <div class="media-left">
-                        <a href="#alertModal" data-toggle="modal" data-target="#alertModal"><i class="icon-lg ion-ios-cloud-download-outline"></i></a>
+                        <a href="#alertModal" data-toggle="modal" data-target="#alertModal"><i class="icon-lg ion-speakerphone"></i></a>
                     </div>
                     <div class="media-body media-middle">
-                        <p>Yes, please. Grab it for yourself, and make something awesome with this.</p>
+                        <p>To make connections, I participated in various organization events and had chances to know people with different backgrounds.</p>
                     </div>
                 </div>
                 <hr>
                 <div class="media wow fadeInRight">
-                    <h3>Unique</h3>
+                    <h3>Leadership</h3>
                     <div class="media-body media-middle">
-                        <p>Because you don't want your Bootstrap site, to look like a Bootstrap site.</p>
+                        <p>In one of the organization I joined, I became Vice President and started to take responsibilities to manage events.</p>
                     </div>
-                    <div class="media-right">
-                        <i class="icon-lg ion-ios-snowy"></i>
+                    <div class="media-right leadership-color">
+                        <i class="icon-lg ion-ios-people-outline"></i>
                     </div>
                 </div>
                 <hr>
                 <div class="media wow fadeIn">
-                    <h3>Popular</h3>
-                    <div class="media-left">
+                    <h3>Community</h3>
+                    <div class="media-left community-color">
                         <i class="icon-lg ion-ios-heart-outline"></i>
                     </div>
                     <div class="media-body media-middle">
-                        <p>There's good reason why Bootstrap is the most used frontend framework in the world.</p>
-                    </div>
-                </div>
-                <hr>
-                <div class="media wow fadeInRight">
-                    <h3>Tested</h3>
-                    <div class="media-body media-middle">
-                        <p>Bootstrap is matured and well-tested. It's a stable codebase that provides consistency.</p>
-                    </div>
-                    <div class="media-right">
-                        <i class="icon-lg ion-ios-flask-outline"></i>
+                        <p>Thanks to the organizations I was in, I had opportunities to be part of the events for schools, communities and international festivals.</p>
                     </div>
                 </div>
             </div>
@@ -364,34 +354,35 @@
     <section id="four" class="bg-white">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="margin-top-0 wow fadeIn">Contact</h2>
+                <div class="col-lg-8 col-lg-offset-2 contact-color text-center">
+                    <h2 class="margin-top-0 wow fadeIn text-primary-dark">CONTACT</h2>
                     <!-- <hr class="primary"> -->
-                    <p>We love feedback. Fill out the form below and we'll get back to you as soon as possible.</p>
+                    <h4>Tel: +1 734-355-2122</h4>
+                    <h4>Email: deanwang@umich.edu</h4>
+                    <h4>I love feedback. Fill out the form below and I'll get back to you as soon as possible.</h4>
                 </div>
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <form class="contact-form row">
+                    <form class="contact-form row" action="sendMail" method="post">
                         <div class="col-md-4">
                             <label></label>
-                            <input type="text" class="form-control" placeholder="Name">
+                            <input type="text" class="form-control" value="Your Name" name="yourName">
                         </div>
                         <div class="col-md-4">
                             <label></label>
-                            <input type="text" class="form-control" placeholder="Email">
+                            <input type="email" class="form-control" value="Your Email" name="yourEmail" required>
                         </div>
                         <div class="col-md-4">
                             <label></label>
-                            <input type="text" class="form-control" placeholder="Phone">
+                            <input type="text" class="form-control" value="Your Phone" name="yourPhone">
                         </div>
                         <div class="col-md-12">
                             <label></label>
-                            <textarea class="form-control" rows="9" placeholder="Your message here.."></textarea>
+                            <textarea class="form-control" rows="9" name="yourMsg">Your message here...</textarea>
                         </div>
                         <div class="col-md-4 col-md-offset-4">
                             <label></label>
                             <br><br>
-                            <button type="button" data-toggle="modal" data-target="#alertModal" class="btn btn-primary btn-lg my-button">Send
-                            </button>
+                            <input type="submit" data-toggle="modal" data-target="#alertModal" class="btn btn-primary btn-lg my-button" value="Send">
                             <br>
                             <br>
                             <div class="text-center">
